--- a/composer.json
+++ b/composer.json
@@ -16,11 +16,11 @@
     }
   },
   "require": {
-    "fakerphp/faker": "^1.23",
     "ext-pdo": "*",
     "doctrine/orm": "^3.1",
     "doctrine/dbal": "^4.0",
     "symfony/cache": "^7.0",
-    "symfony/console": "^7.0"
+    "symfony/console": "^7.0",
+    "fakerphp/faker": "^1.23"
   }
 }
