--- a/composer.json
+++ b/composer.json
@@ -19,8 +19,11 @@
     "ext-pdo": "*",
     "doctrine/orm": "^3.1",
     "doctrine/dbal": "^4.0",
-    "symfony/cache": "^7.0",
     "symfony/console": "^7.0",
-    "fakerphp/faker": "^1.23"
+    "illuminate/database": "^11.7"
+  },
+  "require-dev": {
+    "fakerphp/faker": "^1.23",
+    "symfony/cache": "^7.0"
   }
 }
