--- a/symfony/config/packages/doctrine.yaml
+++ b/symfony/config/packages/doctrine.yaml
@@ -1,6 +1,12 @@
 doctrine:
     dbal:
-        url: '%env(resolve:DATABASE_URL)%'
+        dbname: '%env(DB_NAME)%'
+        host: '%env(DB_HOST)%'
+        port: 3306
+        user: '%env(DB_USER)%'
+        password: '%env(DB_PASSWORD)%'
+        driver: pdo_mysql
+        server_version: '8'
 
         # IMPORTANT: You MUST configure your server version,
         # either here or in the DATABASE_URL env var (see .env file)
@@ -16,12 +22,12 @@ doctrine:
         naming_strategy: doctrine.orm.naming_strategy.underscore_number_aware
         auto_mapping: true
         mappings:
-            App:
+            CarMaster:
                 type: attribute
                 is_bundle: false
-                dir: '%kernel.project_dir%/src/Entity'
-                prefix: 'App\Entity'
-                alias: App
+                dir: '%kernel.project_dir%/src/CarMaster/Entity'
+                prefix: 'CarMaster\Entity'
+                alias: CarMaster
         controller_resolver:
             auto_mapping: true
 
