--- a/symfony/config/services.yaml
+++ b/symfony/config/services.yaml
@@ -20,5 +20,10 @@ services:
             - '../src/CarMaster/'
             - '../src/Kernel.php'
 
+    CarMaster\:
+        resource: '../src/CarMaster/'
+        exclude:
+            - '../src/CarMaster/Entity/'
+
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
