--- a/symfony/config/services.yaml
+++ b/symfony/config/services.yaml
@@ -25,5 +25,8 @@ services:
         exclude:
             - '../src/CarMaster/Entity/'
 
+    Faker\Generator:
+        factory: [ 'Faker\Factory', 'create' ]
+
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
