--- a/symfony/config/packages/framework.yaml
+++ b/symfony/config/packages/framework.yaml
@@ -6,6 +6,12 @@ framework:
     # Note that the session will be started ONLY if you read or write from it.
     session: true
 
+    serializer:
+        default_context:
+            circular_reference_limit: 2
+            enable_max_depth: true
+
+
     #esi: true
     #fragments: true
 
