--- a/symfony/config/packages/security.yaml
+++ b/symfony/config/packages/security.yaml
@@ -13,6 +13,10 @@ security:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
+        api:
+            pattern: ^/api
+            json_login:
+                check_path: api_login
         main:
             lazy: true
             provider: app_user_provider
@@ -33,6 +37,7 @@ security:
     # Note: Only the *first* access control that matches will be used
     access_control:
         - { path: '^/(login|signup)', roles: PUBLIC_ACCESS }
+        - { path: '^/api', roles: ROLE_API }
         - { path: '^/', roles: ROLE_USER }
         # - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
