--- a/symfony/composer.json
+++ b/symfony/composer.json
@@ -23,6 +23,7 @@
         "fakerphp/faker": "^1.23",
         "phpdocumentor/reflection-docblock": "^5.4",
         "phpstan/phpdoc-parser": "^1.29",
+        "predis/predis": "^2.2",
         "symfony/asset": "7.0.*",
         "symfony/asset-mapper": "7.0.*",
         "symfony/console": "7.0.*",
